# evolution

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindGLFW3.cmake
dep/: CMakeLists.txt
dep/Eigen/: CMakeLists.txt
dep/color_console/: CMakeLists.txt
dep/color_console/include/color_console/: color.hpp
dep/imgui/: CMakeLists.txt
dep/stb_image/: CMakeLists.txt
example/: CMakeLists.txt  CameraControls.cpp  CameraControls.hpp  MeshManager.cpp  MeshManager.hpp  ShaderEditor.hpp  main.cpp
example/shaders/: default.frag  default.vert
lib/: CMakeLists.txt
lib/evolution/: CMakeLists.txt
lib/evolution/include/: Batch.hpp  Buffers.hpp  Camera.hpp  Engine.hpp  Input.hpp  MeshImporter.hpp  ProgramSelector.hpp  Projection.hpp  Render.hpp  Setup.hpp  Shader.hpp  Texture.hpp  TextureManager.hpp  utils.hpp
lib/evolution/src/: Batch.cpp  Buffers.cpp  Camera.cpp  Input.cpp  MeshImporter.cpp  ProgramSelector.cpp  Projection.cpp  Render.cpp  Setup.cpp  Shader.cpp  Texture.cpp  TextureManager.cpp  utils.cpp
lib/evolution/test/: CMakeLists.txt  EvolutionGameEngineTestMain.cpp
python/: CMakeLists.txt  __init__.py  bindings.cpp  example.py  getwheelname.py.in  setup.py.in
python/pyEvolution/: __init__.py
src/: Buffers.cpp  Buffers.hpp  CMakeLists.txt  MeshManager.cpp  MeshManager.hpp  Projection.hpp  Render.cpp  Render.hpp  ShaderEditor.cpp  ShaderEditor.hpp  main.cpp  utils.cpp
src/color_console/: CMakeLists.txt  color.hpp
src/imgui/: CMakeLists.txt
src/shaders/: default.vert
