cmake_minimum_required(VERSION 3.21)
project(evolution)
#################################
find_package(OpenGL REQUIRED)
set(GLEW_USE_STATIC_LIBS TRUE)
set(GLEW_INSTALL_DIR "C:/dev/extern/glew-2.1.0" CACHE FILEPATH "Path to GLEW installation")
set(CMAKE_PREFIX_PATH ${GLEW_INSTALL_DIR})
if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/dist CACHE PATH "installation path" FORCE)
endif()
find_package(Boost REQUIRED COMPONENTS unit_test_framework PATHS C:/Boost)
find_package(GLEW REQUIRED)
set(GLFW3_ROOT "C:/Program Files (x86)/GLFW" CACHE FILEPATH "Path to GLFW installation")
################################
# dependency order
add_subdirectory(dep)
set(project_name EvolutionGameEngine)
set(lib_name ${project_name})
set(exe_name ${project_name}Exe)
add_subdirectory(lib)
add_subdirectory(src)
